[metadata]
name = aws-lambda-cask
version = 0.1.0
url = https://github.com/pilate/aws-lambda-cask
description = Wrapper to enable usage of Python WSGI frameworks within AWS Lambda environments.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
